--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/website.jpeg">
   <meta name="description" content="I am a first generation college student and this is my second year at UCR">
   <meta name="author" content="862267136">
 
